tree-sitter-ntriples/test/corpus/ntriples.txt
===
Simple triple
===

<http://example.org/#spiderman> <http://www.perceive.net/schemas/relationship/enemyOf> <http://example.org/#green-goblin> .

---

(ntriplesDoc
  (triple
    subject: (IRI)
    predicate: (IRI)
    object: (IRI)))

===
Multiple triple
===

<http://example.org/#spiderman> <http://www.perceive.net/schemas/relationship/enemyOf> <http://example.org/#green-goblin> .

<http://example.org/#spiderman> <http://www.perceive.net/schemas/relationship/enemyOf> <http://example.org/#green-goblin> .

---

(ntriplesDoc
  (triple
    subject: (IRI)
    predicate: (IRI)
    object: (IRI))
  (triple
    subject: (IRI)
    predicate: (IRI)
    object: (IRI)))

===
Triple term
===

_:anno <http://www.w3.org/1999/02/22-rdf-syntax-ns#reifies> <<( _:e38 <http://example.com/jobTitle> "Designer" )>> .

---

(ntriplesDoc
  (triple
    subject: (blank_node)
    predicate: (IRI)
    object: (tripleTerm
      (triple_term
        subject: (blank_node)
        predicate: (IRI)
        object: (literal
          (lexical_form))))))

===
Comment
===

# Comment
<s> <p> <o> . # Comment
---

(ntriplesDoc
  (comment)
  (triple
    subject: (IRI)
    predicate: (IRI)
    object: (IRI))
  (comment))

===
Multi-script iri
===

<http://伝言.example/?user=أكرم&amp;channel=R%26D> <p> <o> .

---

(ntriplesDoc
  (triple
    subject: (IRI)
    predicate: (IRI)
    object: (IRI)))

===
Quoted literals
===

<s> <p> "That Seventies Show"^^<http://www.w3.org/2001/XMLSchema#string> .
<s> <p> "That Seventies Show" .

---

(ntriplesDoc
  (triple
    subject: (IRI)
    predicate: (IRI)
    object: (literal
      (lexical_form)
      datatype_IRI: (IRI)))
  (triple
    subject: (IRI)
    predicate: (IRI)
    object: (literal
      (lexical_form))))

===
Language tag
===

<s> <p> "That Seventies Show"@fr-be .

---

(ntriplesDoc
  (triple
    subject: (IRI)
    predicate: (IRI)
    object: (literal
      (lexical_form)
      (language_tag))))

===
Directional language tag
===

<s> <p> "That Seventies Show"@fr-be--ltr .

---

(ntriplesDoc
  (triple
    subject: (IRI)
    predicate: (IRI)
    object: (literal
      (lexical_form)
      (language_tag)
      (base_direction))))

===
String with Hash
===

<s> <p> "foo#" .

---

(ntriplesDoc
  (triple
    subject: (IRI)
    predicate: (IRI)
    object: (literal
      (lexical_form))))

===
Blank nodes
===

_:alice <knows> _:bob .

---

(ntriplesDoc
  (triple
    subject: (blank_node)
    predicate: (IRI)
    object: (blank_node)))

===
Escape sequences
===

<s> <p> "\ta\b" .

---

(ntriplesDoc
  (triple
    subject: (IRI)
    predicate: (IRI)
    object: (literal
      (lexical_form
        (ECHAR)
        (ECHAR)))))

===
Hex in STRING_LITERAL_QUOTE
===

<s> <p> "Foo\u0020bar" .

---

(ntriplesDoc
  (triple
    subject: (IRI)
    predicate: (IRI)
    object: (literal
      (lexical_form
        (UCHAR)))))

===
Hex in IRIREF
===

<\u1111> <p> <http://www.dit.unitn.it/\u0020pavel/om2017/papers/oaei17_paper11.pdf> .

---

(ntriplesDoc
  (triple
    subject: (IRI
      (UCHAR))
    predicate: (IRI)
    object: (IRI
      (UCHAR))))

===
Prefix whitepsace in IRIREF
:error
===

< s> <p> <o> .

---



===
Postfix whitepsace in IRIREF
:error
===

<s > <p> <o> .

---



===
Prefix whitepsace HEX in IRIREF
:error
===

< /0000> <p> <o> .

---



===
Postfix whitepsace HEX in IRIREF
:error
===

</0000 > <p> <o> .

---



===
Prefix whitepsace in LANG_TAG
===

<s> <p> "string" @de .

---

(ntriplesDoc
  (triple
    subject: (IRI)
    predicate: (IRI)
    object: (literal
      (lexical_form)
      (language_tag))))

===
Postfix whitepsace in LANG_TAG
:error
===

<s> <p> "string"@ de .

---
